[package]
name = "air_oki"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
fps = []

[dependencies]
bevy = "0.11"
bevy_xpbd_2d = "0.2"
rand = "0.8.5"
